--- a/main.html
+++ b/main.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="css/input.css">
 </head>
 
-<body background="img/—Pngtree—geometric shapes sets with multi_3652063.png">
+<body background="IMG/—Pngtree—geometric shapes sets with multi_3652063.png">
     <div class="container">
         <div class="side">
-            <img src="img/pngegg (2).png" alt="icon" class="anim_icon"> 
+            <img src="IMG/pngegg (2).png" alt="icon" class="anim_icon"> 
         </div>
         <div class="main">
             <div class="logo"><img src="IMG/295128.png" class="log"></div>
