--- a/main.html
+++ b/main.html
@@ -15,15 +15,19 @@
             <img src="IMG/pngegg (2).png" alt="icon" class="anim_icon"> 
         </div>
         <div class="main">
-            <div class="logo"><img src="IMG/295128.png" class="log"></div>
-            <div class="head"><h1>Login</h1></div>
+            <div class="heading">
+                <img src="IMG/295128.png" class="log"> &ThickSpace;
+                <div class="head"><h1>Login</h1></div>
+            </div>
             <div class="value" id="name">UserName</div>
             <div class="element"><input type="text"></div><br>
             <div class="value" id="pass">Password</div>
             <div class="element"><input type="password"></div>
-            <div class="agree">&nbsp &nbsp &nbsp &nbsp &nbspAccept Agreement</div>
-            <div class="check"><input type="checkbox" ></div>
-            <button>Submit</button>
+            <div class="agree">
+                <div class="ag">Accept Agreement</div>
+                <input type="checkbox" class="check">
+            </div>
+            <button id="btn">Login</button>
         </div>
     </div>
 </body>
